RESOLVED FIXED305443
REGRESSION(305526@main) [GLIB] build error with GCC and assertions disabled
https://bugs.webkit.org/show_bug.cgi?id=305443
Summary REGRESSION(305526@main) [GLIB] build error with GCC and assertions disabled
Lauro Moura
Reported 2026-01-13 19:41:43 PST
Error after 305526: FAILED: lib/libTestRunnerInjectedBundle.so : && /usr/bin/c++ -fPIC -fdiagnostics-color=always -Wextra -Wall -pipe -fmax-errors=20 -Wno-odr -Wno-stringop-overread <snip long list of arguments>: ld.lld: error: undefined symbol: WebCore::AudioTrack::~AudioTrack() >>> referenced by JSInternals.cpp >>> JSInternals.cpp.o:(WebCore::jsInternalsPrototypeFunction_shouldAudioTrackPlay(JSC::JSGlobalObject*, JSC::CallFrame*)) in archive lib/libWebCoreTestSupport.a collect2: error: ld returned 1 exit status It is not affecting EWS (Assertions enabled), the debug builds, or the clang bots.
Attachments
Lauro Moura
Comment 1 2026-01-13 19:59:58 PST
EWS
Comment 2 2026-01-14 00:05:26 PST
Committed 305563@main (942f7d04a139): <https://commits.webkit.org/305563@main> Reviewed commits have been landed. Closing PR #56536 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-14 00:06:18 PST
Note You need to log in before you can comment on or make changes to this bug.