REGRESSION(305526@main) [GLIB] build error with GCC and assertions disabled https://bugs.webkit.org/show_bug.cgi?id=305443

Reviewed by Fujii Hironori.

Explicitly export AudioTrack destructor as, after 305526@main, RefPtr<AudioTrack> in
JSInternals.cpp related code will use it. GCC Release + Assertions Disabled builds
were failing due to the destructor not being exported.

* Source/WebCore/html/track/AudioTrack.h:

Canonical link: https://commits.webkit.org/305563@main